# Documents

./: .gitignore  140keVelectron.tex  CopperAndTi.tex  Family.tex  November.tex  October.tex  September.tex  beamerthemeMystyle.sty  test.cc
December/: OneLineOfRealdataFigure.eps  OneLineOfSimulationFigure.eps  PbThickness.txt  SimulationData_10cmwater_Collimator.eps  SimulationData_10cmwater_Collimator_NoScattering.eps  SimulationData_10cmwater_NoCollimator.eps
November/: AttachCrystalEnergy.eps  EscapeCrystalEnergy.eps  EscapeCrystalRatio.eps  EscapeRatioNhits1.eps  SingleEnergyWaterDirectEnergy.eps  SingleEnergyWaterDirectNumber.eps  Spectrum.eps  data.txt  depositEnergy.eps  depositPosition.eps  depositPositionRebin.eps  matPb10MevGammaMu.eps  matPb1500kevGammaMu.eps  matPb1MevGammaMu.eps  matPb250kevGammaMu.eps  matPb2MevGammaMu.eps  matPb500kevGammaMu.eps
October/: 140keVElectronXrayAluminumDistribution.eps  140keVElectronXrayAluminumDistributionRatio.eps  140keVElectronXrayCopperDistribution.eps  140keVElectronXrayCopperDistributionRatio.eps  140keVdata.txt  140keVelectronEnergyAfterAluminumApron.eps  140keVelectronEnergyAfterCopperApron.eps  CMakeLists.txt  NoCollimator.txt  Test.eps  TestGrayStyle.eps  TestGrayStyleBack.eps  WithCollimator.txt  WithCollimatorDirectEnergy.eps  WithCollimatorDirectEnergyMerged.eps  WithCollimatorDirectNumber.eps  WithCollimatorDirectNumberMerged.eps  WithCollimatorScatteringEnergy.eps  WithCollimatorScatteringEnergyMerged.eps  WithCollimatorScatteringNumber.eps  WithCollimatorScatteringNumberMerged.eps  WithCollimatorScatteringRatio.eps  WithCollimatorScatteringRatioMerged.eps  WithCollimatorScatteringRatioMerged1.eps  WithoutCollimatorDirectEnergy.eps  WithoutCollimatorDirectEnergyMerged.eps  WithoutCollimatorDirectNumber.eps  WithoutCollimatorDirectNumberMerged.eps  WithoutCollimatorScatteringEnergy.eps  WithoutCollimatorScatteringEnergyMerged.eps  WithoutCollimatorScatteringNumber.eps  WithoutCollimatorScatteringNumberMerged.eps  WithoutCollimatorScatteringRatio.eps  WithoutCollimatorScatteringRatioMerged.eps  WithoutCollimatorScatteringRatioMerged1.eps  data.txt
September/: AlCu.eps  data.txt  (+35 more)
(+5 files in other folders)
